--- a/MIST143_Traveler/Views/Shared/Components/CouponClose/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CouponClose/Default.cshtml
@@ -1,11 +1,11 @@
-
+﻿
 
 @model List<MIST143_Traveler.MViewModel.我的優惠券>
 @using Microsoft.AspNetCore.Http
 @using System.Text.Json;
 @inject IHttpContextAccessor Accessor
 @{
-    ViewData["Title"] = "CouponExp";
+    ViewData["Title"] = "CouponClose";
 }
 <div class="container" id="COCO">
     <div>
