--- a/MIST143_Traveler/wwwroot/css/會員中心/Table.css
+++ b/MIST143_Traveler/wwwroot/css/會員中心/Table.css
@@ -1,16 +1,19 @@
 ﻿.樣式:hover {
-    color: coral
+    color: coral;
+        
 }
 
 .tdname {
     max-width: 300px;
     overflow: hidden;
-    text-overflow:ellipsis;
+    text-overflow: ellipsis;
+   
 }
 .thname {
     max-width: 300px;
     overflow: hidden;
     text-overflow:ellipsis;
+    
 }
 .thbtn {
     max-width: 92px;
