--- a/MIST143_Traveler/Views/Shared/Components/CommentList/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CommentList/Default.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewData["Title"] = "Default";
 }
-<link href="~/css/會員中心/Table.css" rel="stylesheet" />
+@*<link href="~/css/會員中心/Table.css" rel="stylesheet" />*@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
 
 
@@ -40,7 +40,7 @@
         @foreach (var item in Model.評論)
         {
 
-            <tr class="樣式">
+            <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.產品名稱)
                 </td>
