--- a/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
@@ -125,7 +125,7 @@
 <script>
 
     //表單驗證
-   
+
     $(function () {
         $(function () {
             $("#form").makeValidationInline();
@@ -142,7 +142,7 @@
                 },
                 Phone: {
                     required: true,
-                    minlength: 8,
+                    minlength: 10,
                     maxlength:10,
                     number: true
                 },
@@ -172,7 +172,7 @@
                 },
                 Phone: {
                     required: '必填',
-                    minlength: '不得少於8位',
+                    minlength: '不得少於10位',
                     maxlength: '不得大於10位',
                     number: '電話需為數字'
                 },
@@ -309,6 +309,15 @@
             })
             }
             EMM()*@
+   
+            function ccclear()
+            {
+            console.log(123)
+                $(".formError").addClass("ajaxSubmit")
+                location.reload()
+            }
+
+
 </script>
 
 
